--- a/style8.css
+++ b/style8.css
@@ -6,10 +6,10 @@ body{
     box-sizing: border-box;
 }
 form{
-    width: 400px;
-    border: 1px #aaa solid;
-    border-radius: 8px;
-    background-color: #fcfcfc;
+    width: 380px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background-color: #f8f8f8;
     padding: 10px;
     margin: auto;
 }
@@ -19,15 +19,15 @@ form h3{
     margin-top: 10px;
 }
 form input{
-    font-size: 16px;
+    font-size: 15px;
 }
 form input,
 form textarea,
 form select{
     outline: none;
-    border: 1px #aaa solid;
-    border-radius: 3px;
-    padding: 3px 6px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    padding: 4px 8px;
 }
 .w100{
     width: 100%;
@@ -36,47 +36,47 @@ form > div{
     margin: 6px 0;
 }
 form .ent{
-    text-align: left;
+    text-align: center;
 }
 form .ent label{
-    margin-left: 10px;
+    margin-left: 8px;
 }
 form .ent > input{
-    margin-left: 12px;
+    margin-left: 10px;
 }
 form textarea{
     width: 100%;
-    height: 100px;
+    height: 120px;
     resize: vertical;
-    font-size: 16px;
+    font-size: 15px;
 }
 form button{
-    width: 100px;
-    height: 30px;
-    background: rgb(60, 255, 190);
+    width: 90px;
+    height: 28px;
+    background: rgb(60, 205, 160);
     border: none;
-    border-radius: 5px;
+    border-radius: 4px;
     cursor: pointer;
-    margin-left: calc(50% - 50px);
+    margin-left: calc(50% - 45px);
     outline: none !important;
 }
 form button:active{
-    filter: brightness(120%);
+    filter: brightness(110%);
 }
 .message{
     position: absolute;
-    top: 10%;
-    font-size: 24px;
-    color: green;
+    top: 8%;
+    font-size: 22px;
+    color: #008000;
     text-align: center;
     left: 0;
     right: 0;
 }
 .messageError{
     position: absolute;
-    top: 30%;
-    font-size: 24px;
-    color: red;
+    top: 28%;
+    font-size: 22px;
+    color: #ff0000;
     text-align: center;
     left: 0;
     right: 0;
@@ -87,5 +87,5 @@ form button:active{
     align-items: center;
     height: 100vh;
     width: 100vw;
-    min-height: 900px;
+    min-height: 880px;
 }
